--- a/sportsclinic.html
+++ b/sportsclinic.html
@@ -67,14 +67,14 @@
                         <ul class="submenu">
                             <li><a href="sportsclinic.html">허리 목 척추질환</a></li>
                             <li><a href="sportsclinic.html">조직재생주사치료</a></li>
-                            <li><a href="sportsclinic.html">TIP근막동통주사자극치료</a></li>
+                            <li><a href="sportsclinic.html">근막동통주사자극치료</a></li>
                             <li><a href="sportsclinic.html">추음파유도주사치료</a></li>
                             <li><a href="sportsclinic.html">디지털영상유도 주사치료</a></li>
                         </ul>
                         </li>
                         <li><a href="sportsclinic.html">메티컬트레이닝센터</a>
                             <ul class="submenu">
-                            <li><a href="sportsclinic.html">프리미엄 수술 후 전문재활</a></li>
+                            <li><a href="sportsclinic.html">프리미엄 전문재활</a></li>
                             <li><a href="sportsclinic.html">메디컬 트레이닝</a></li>
                             <li><a href="sportsclinic.html">특수전문 도수치료</a></li>
                             <li><a href="sportsclinic.html">움직임 도수치료</a></li> 
