--- a/sportsclinic.html
+++ b/sportsclinic.html
@@ -81,13 +81,13 @@
                            
                         </ul>
                         </li>
-                        <li><a href="sportsclinic.html">스포츠영양클리닉</a>
+                        <li><a href="nutrition.html">스포츠영양클리닉</a>
                             <ul class="submenu">
-                            <li><a href="sportsclinic.html">스포츠 영양센터</a></li>
-                            <li><a href="sportsclinic.html">스포츠 영양수액</a></li>
-                            <li><a href="sportsclinic.html">만성피로 영양수액</a></li>
-                            <li><a href="sportsclinic.html">항노화 영양수액</a></li>
-                            <li><a href="sportsclinic.html">면역력 강화 영양수액</a></li>
+                            <li><a href="nutrition.html">스포츠 영양센터</a></li>
+                            <li><a href="nutrition.html">스포츠 영양수액</a></li>
+                            <li><a href="nutrition.html">만성피로 영양수액</a></li>
+                            <li><a href="nutrition.html">항노화 영양수액</a></li>
+                            <li><a href="nutrition.html">면역력 강화 영양수액</a></li>
                         </ul>
                         </li>
                         <li><a href="sportsclinic.html">고객센터</a>
