--- a/sportsclinic.html
+++ b/sportsclinic.html
@@ -9,6 +9,7 @@
     <script src="script/jquery-1.12.3.js"></script>
     <script src="script/script.js"></script>
     <link href="css/style_sub.css" rel="stylesheet" type="text/css">
+    <link href="css/commonness.css" rel="stylesheet" type="text/css">
 
 </head>
 
