--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="script/jquery-1.12.3.js"></script>
     <script src="script/script.js"></script>    
     <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/commonness.css" rel="stylesheet" type="text/css">
     
 
 </head>
