--- a/nutrition.html
+++ b/nutrition.html
@@ -155,7 +155,7 @@
                 <li><img src="images/sub2-img1.png" alt="이미지"><p>원인모를 두통과 피로감을 느낀다면<br>만성피로 영양 수액 프로그램 <br><span class="back1"><a href="#">만성피로 영양수액</a></span></p></li>
                 <li><img src="images/sub2-img2.png" alt="이미지"><p>우리몸의 속성 산소를 제거하고 노화억제<br>효과를 나타내는 항상화 프로그램 <br><span class="back2"><a href="#">항노화 영양수액</a></span></p></li>
                 <li><img src="images/sub2-img3.png" alt="이미지"><p>근육통완화, 에너지 보충 등 전문적으로<br>운동하시는 분들을 위한 프로그램 <br><span class="back3"><a href="#">스포츠 영양수액</a></span></p></li>
-                <li><img src="images/sub2-img4.png" alt="이미지"><p>에너지보충, 면역력 증진등 신체 빠른 회복을<br>위한 면역력 강화 프로그램 <br><span class="back4"><a href="#">면역력 강화 영양수액</a></span></p></li>
+                <li><img src="images/sub2-img4.png" alt="이미지"><p>에너지보충, 면역력 증진등 신체 빠른 회복을<br>위한 면역력 강화 프로그램 <br><span class="back4"><a href="#">면역력 영양수액</a></span></p></li>
             </ul>
             
             
